--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<p> tpday is my first day of cooding</p>
+<p> today is my first day of cooding</p>
 
 <button (click)="getStudentDetails()">Submit</button>
 <button (click)="searchCourseById(10)">  course number</button>
