1 address with in

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,10 @@
 <button (click)="getStudentDetails()">Submit</button>
 <button (click)="searchCourseById(10)">  course number</button>
 <button (click)="checkCaseStatus()"> check status</button>
+
+
+<button (click)="getCSInfo()"> Check CS INFO</button>
+<!-- <button (click)="getTestINFO()"> click for result</button> -->
+<button (click)="getUNIList()"> click for details </button>
+<!-- <button (click)="getMovieRatings()"> click gor updates</button> -->
+ <button (click)=" movieDetail()">click for movie rating</button>
